# Aerial-Robotics-and-Smart-System

./: .gitignore  CMakeLists.txt  README.md
motors/: CMakeLists.txt  uppies.cpp
mpu/: CMakeLists.txt
pico/copy_me/: CMakeLists.txt  main.c
pico/motors/: CMakeLists.txt  uppies.cpp
pico/mpu/: main.c
pico/src/: CMakeLists.txt  main.c
src/: CMakeLists.txt  FreeRTOSConfig.h  main.c
